--- a/App.css
+++ b/App.css
@@ -1,20 +1,57 @@
-.card{
-  margin: 20px;
-  padding: 20px;
-  border: 1px solid black;
-  color: rgb(226, 100, 100);
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+h3{
+  color: mediumslateblue;
+}
+
+.container{
+  height: 100vh;
+  width: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-}
-
-
-.btn{
-  padding: 10px;
-  background-color: rgb(171, 158, 245);
   border: 1px solid black;
-  border-radius: 10px;
-  cursor: pointer;
 }
 
+.form{
+  display: flex;
+  flex-direction: column;
+  /* align-items: ; */
+  justify-content: center;
+  background-color: aliceblue;
+  height: 100%;
+  width: 60%;
+}
+
+.gender{
+  display: flex;
+}
+
+.form input{
+  /* background-color: red; */
+  padding: 12px 10px;
+  border-radius: 10px;
+  box-shadow: 0px 4px 0px ;
+  font-size: 1rem;
+}
+
+
+.gender{
+  box-shadow: 0px 0px 0px;
+  /* background-color: red; */
+  margin-top:10px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.form input:hover{
+  background-color: rgb(205, 203, 203);
+  color: white;
+  text-align: center;
+}
