--- a/App.css
+++ b/App.css
@@ -4,54 +4,13 @@
   box-sizing: border-box;
 }
 
-h3{
-  color: mediumslateblue;
-}
-
-.container{
-  height: 100vh;
-  width: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  border: 1px solid black;
-}
-
 .form{
   display: flex;
   flex-direction: column;
-  /* align-items: ; */
-  justify-content: center;
-  background-color: aliceblue;
-  height: 100%;
-  width: 60%;
-}
-
-.gender{
-  display: flex;
-}
-
-.form input{
-  /* background-color: red; */
-  padding: 12px 10px;
-  border-radius: 10px;
-  box-shadow: 0px 4px 0px ;
-  font-size: 1rem;
-}
-
-
-.gender{
-  box-shadow: 0px 0px 0px;
-  /* background-color: red; */
-  margin-top:10px;
-  display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
+  height: 50vh;
+  width: 50vw;
+  border: 1px solid black;
 }
 
-.form input:hover{
-  background-color: rgb(205, 203, 203);
-  color: white;
-  text-align: center;
-}
