--- a/App.css
+++ b/App.css
@@ -1,16 +1,70 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-
-.form{
+/* 
+.form {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 50vh;
-  width: 50vw;
-  border: 1px solid black;
+ 
+  background-color: white;
+}
+
+.form .container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  /* background-color: rgb(103, 19, 19); */
+  /* justify-content: center;
+  height: 500px;
+  width: 500px; */
+/* } */
+
+/* .form .container .field {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  background-color: rgb(235, 231, 231);
+  height:70%;
+  width: 70%; */
+/* } */ 
+
+
+body{
+  background-color: rgb(205, 197, 249);
+
+}
+
+.form{
+  height: 350px;
+  width: 300px;
+  background-color: white;
+  margin: auto;
+  margin-top: 10rem;
+  border-radius: 10px;
+}
+.form .container{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.form .container .field{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  /* background-color: red; */
+}
+
+.form .container .field label{
+  
 }
 
